src/test/ui/issues/issue-6458.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-6458.rs:9:22
   |
LL |    foo(TypeWithState(marker::PhantomData));
   |                      ^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `PhantomData`
   |
help: consider specifying the generic argument
   |
LL |    foo(TypeWithState(marker::PhantomData::<T>));
   |                                         +++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
